force-app/main/default/objects/SAP_Customer_Detail__c/SAP_Customer_Detail__c.object-meta.xml
<CustomObject>
    <label>SAP Customer Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Customer Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>