force-app/main/default/objects/SAP_Customer_Detail__c/fields/Sample_Display_Customer_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display_Customer_Confirm__c</fullName>
    <label>Sample Display Customer Confirm</label>
    <referenceTo>Sample_Display_Customer_Confirm__c</referenceTo>
    <relationshipLabel>SAP Customer Detail</relationshipLabel>
    <relationshipName>SAP_Customer_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>