force-app/main/default/objects/SAP_Customer_Detail__c/fields/Task_Level__c.field-meta.xml
<CustomField>
    <fullName>Task_Level__c</fullName>
    <formula>Sample_Display_Customer_Confirm__r.Task_Level__c</formula>
    <label>Task Level</label>
    <type>Text</type>
</CustomField>