force-app/main/default/objects/SAP_Customer_Detail__c/fields/VBELN_POSNR__c.field-meta.xml
<CustomField>
    <fullName>VBELN_POSNR__c</fullName>
    <description>销售和分销凭证号_行项目，唯一值</description>
    <externalId>true</externalId>
    <label>VBELN_POSNR</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>